--- a/11.md
+++ b/11.md
@@ -30,6 +30,7 @@
 - **[GENet]** Gather-Excite: Exploiting Feature Context in Convolutional Neural Networks
 - **[BAM]** BAM: Bottleneck Attention Module
 - **[GCNet]** GCNet: Non-local Networks Meet Squeeze-Excitation Networks and Beyond
+	- ICCV 2019 `Best Paper Award`
 	- 感觉有戏，可以试试（上面三个没有track的paper）
 	- `non-local network`
 
@@ -173,7 +174,7 @@
 	- `long-term`
 - **[]** Bridging the Gap Between Detection and Tracking: A Unified Approach
 	- `Detection and Tracking`
-- **[UpdateNet]** Learning the Model Update for Siamese Trackers
+- **[UpdateNet]** Learning the Model Update for Siamese Trackers  √ :sunny:
 	- `update`
 - **[GFS-DCF]** Joint Group Feature Selection and Discriminative Filter Learning for Robust Visual Object Tracking
 
@@ -226,66 +227,149 @@
 
 
 # 11/27
-## SiamFC 被引，关于题目有Siamese的论文
+## SiamFC 被引，关于题目有Siamese关键词的论文
 - **[]** Siamese Networks: The Tale of Two Manifolds
+	
 	- ICCV2019 
+	
 - **[]** Hierarchical spatial-aware Siamese network for thermal infrared object tracking
-	- SCI_2
+	- Knowledge-Based Systems journal、SCI_1、
+	- thermal infrared 热红外跟踪
+- [x]  **[SiamAtt]** Target-Specific Siamese Attention Network for Real-time Object Tracking
+	
+	- IEEE Transactions on Information Forensics and Security、SCI_1
+	- *深度相似性跟踪器能够以高于实时的速度进行跟踪。 但是，由于它们避免了有价值的在线提示，因此其准确性大大低于基于深度分类的跟踪器。 为了提供特定于目标的信息以进行实时对象跟踪，我们提出了一种新颖的暹罗注意网络。 **不同类型的注意力机制**用于捕获目标信息的不同上下文，然后将学习到的知识用于在相似性跟踪的不同表示级别提供目标提示。 另外，采用在线学习机制来利用可用的特定于目标的数据。* 
+	- 在`SiamFC`基础上集成了**`残差注意力`和`通道注意力`**，并充分分析了这两种注意力带来的好处，还选择了在线微调`通道注意力`（计算开销小）（这里的更新机制没看太明白），消融实验做的很充分；
+	- 值得注意的是`训练方式`，**多次分开训练**，避免注意力模块和backbone一起训练带来性能损失；
+	
 - **[]** Masked and dynamic Siamese network for robust visual tracking
-	- SCI_1
+	
+	- Information Sciences、SCI_1
+	- *由于语义背景和目标模板的简单建模策略导致的分心问题往往会导致性能下降。在本研究中，我们在现有暹罗网路追踪器的基础上，提出两个模组，即目标对象模型和目标模板模型来解决这些问题。目标对象模型根据前景和背景区域的颜色分布，计算搜索区域中与被跟踪目标相关的每个像素的可能性。计算出的目标似然图在先前的响应图上被屏蔽，然后调整最终的响应图以聚焦于目标。这种方法扩大了被跟踪目标与周围背景的区分，从而缓解了干扰问题。目标模板模型采用高斯混合模型对目标外观变化进行编码，模型中的每个分量代表目标的不同方面，并学习和动态更新分量权重。提出的高斯模型在增强分集的同时减少了目标样本之间的冗余度。*
+	
 - **[]** Hyper-feature based tracking with the fully-convolutional Siamese network
 	- 垃圾会议；和上一篇同作者，国防科大
 	- **[]** Hyper-Siamese network for robust visual tracking
-		- SCI_4 和上篇一样的，投完会议又投期刊？
+		- SCI_4 和上篇一样的，投完会议又投期刊？ 
+	
+- [x] **[FCAF]** Fully Conventional Anchor-Free Siamese Networks for Object Tracking
+  
+  - IEEE Access、SCI_2
+  - 1、整体结构类似`C-RPN`（没引），包括融合模块；2、backbone换成ResNet50（略有改动），这是借鉴`SiamRPN++`，并且为了解决padding的影响，训练方式也是采用的`空间感知采样策略`；3、头部结构在分类，回归分支上新增一个中心`Center-ness`，这也直接借鉴的`FCOS`（没引）。
+- 结果只在OTB2015和VOT2016上测试了，结果还行；说能实时，但没说具体多少帧！
+  
+- [x] **[Siam+LWN+CA+ABSI]** Siamese Network Using Adaptive Background Superposition Initialization for Real-Time Object Tracking ::sunny: ::star2:  
+  
+  - IEEE Access、SCI_2
+  
+  - *由于Siamese跟踪器只能通过离线训练来学习相似性度量模型，因此样本分支没有足够的判别信息来适应目标在后续帧中不断变化的外观。我们提出了一种基于暹罗网络的跟踪器，可以提高跟踪性能如下。首先，提出了一种**自适应的背景叠加初始化**方法，并将其应用于示例分支中，以充分利用第一帧中有限的先验信息。其次，提出了一种**轻量级卷积神经网络**作为跟踪器的骨干，它对特征的维数进行压缩以保证速度和精度。第三，将**信道注意模块**引入到跟踪器中，并结合自适应背景叠加初始化。利用通道注意模型调整原始样本图像及其背景变化图像的特征映射，并进行融合，增强样本图像的表现力。**GOT-10k数据集用于训练我们的跟踪器**。*
+  
+  - 实验做的很充分，测试了OTB、VOT2018；文章书写的很全面，`实验细节`、`参数选择`都有说明（这里多看下）；速度50fps；
+  
+  - 对于文章的三个创新点，提点还是`网络的设计`上作用更大；
+  
+  - 但是`自适应背景初始化`是一个很不错的创新点！
+  
+    > 本文只对第一帧模板进行了背景变化，是否可以对后续帧也采用类似的处理？？
+    > 背景自适应，或是说`背景抑制凸显目标`，让目标的特征更强，减少背景干扰（检测有[两篇]()）
+    >
+    > > Accelerating Object Detection by Erasing Background Activations
+    > >
+    > > Selective Convolutional Network: An Efficient Object Detector with Ignoring Background
+  
+  - 训练的数据集只用了`GOT-10k`，并且还与用VID数据集做了对比，GOT-10k更好一些，但是居然没有把GOT-10k的测试结果贴出来（可能结果不太好吧，不好对比）；
+  
+- **[]** Distractor-Aware Visual Tracking by Online Siamese Network  ::sunny:
+  
+  - IEEE Access、SCI_2 
+  - *大多数基于暹罗网络的跟踪器的想法是离线培训和在线跟踪。 实际上，在线跟踪是根据深度特征进行的，这些深度特征是从经过离线数据训练的预定义网络中提取的。 但是，这些特征是相似对象的一般表示，因此，它们的区分能力不足以从背景中识别当前的跟踪目标，尤其是干扰因素。 为了解决此问题，我们建议**在线更新由暹罗网络提取的功能**。 这些功能可以实时跟踪目标变化。 特别是，我们从离线训练的浅层卷积层中提取出共同特征，然后将它们用作深层卷积层的输入，以在线学习当前目标的特殊特征。 此外，提出了一种集成更新策略来加速网络融合。 增强学习特征从背景和干扰因素中识别当前目标的辨别能力是有益的。*
+  
+- **[]** Siamese Tracking from Single Point Initialization
+  
+  - Sensors、SCI_2
+  
 - **[]** Robust real-time visual object tracking via multi-scale fully convolutional Siamese networks
 	- SCI_4
 	- 分块？
-- **[]** An In-Depth Analysis of Visual Tracking with Siamese Neural Networks
-	- ☆
-- **[]** Long-term object tracking based on siamese network
-	- CCF_C
-- **[]** Fully Convolutional Siamese Fusion Networks for Object Tracking
-	- CCF_C
-- **[]** Siamese Networks with Discriminant Correlation Filters and Channel Attention
-	- CCF_D
-- **[]** Region-based fully convolutional siamese networks for robust real-time visual tracking
-	- CCF_D
-- **[]** Target-Specific Siamese Attention Network for Real-time Object Tracking
-	- SCI_2
-- **[]** Describe and Attend to Track: Learning Natural Language guided Structural
-Representation and Visual Attention for Object Tracking
-	- arxiv
-- **[]** Fully Conventional Anchor-Free Siamese Networks for Object Tracking
-	- SCI_2
-- **[]** Siamese recurrent architecture for visual tracking
-	- CCF_D
-- **[]** Flow Guided Siamese Network for Visual Tracking
-	- CCF_C
-- **[]** Siamese Tracking from Single Point Initialization
-	- SCI_3
+	
 - **[]** Siamese adversarial network for object tracking
-	- SCI_4
-- **[]** Siamese Feature Pyramid Network for Visual Tracking
-	- CCF_D
-- **[]** Adaptive Hierarchical Siamese Network for Object Tracking
-	- CCF_D
-- **[]** Deep Siamese Networks toward Robust Visual Tracking
-	- 综述，没下到
-- **[]** Visual Tracking Via Siamese Network With Global Similarity
-	- CCF_C
-- **[]** Siamese Network Using Adaptive Background Superposition Initialization for Real-Time Object Tracking
-	- SCI_2
-- **[]** DomainSiam: Domain-Aware Siamese Network for Visual Object Tracking
-	- CCF_D
-- **[]** Cross-Layer Convolutional Siamese Network for Visual Tracking
-	- CCF_C
-- **[]** Learning to Match Using Siamese Network for Object Tracking
-	- CCF_D
-- **[]** Dice Loss in Siamese Network for Visual Object Tracking
-	- CCF_D
-- **[]** Distractor-Aware Visual Tracking by Online Siamese Network
-	- SCI_2 ,没下到
 
+  - ELECTRONICS LETTERS、SCI_4
+  - 短文
+
+- **[]** Long-term object tracking based on siamese network
+	
+	- ICIP 2017、CCF_C
+	- *在本文中，我们提出了基于暹罗网络的长期跟踪器。 我们解决了长期跟踪的问题，目标对象由于严重变形，遮挡，突然运动和视线不佳而出现明显的外观变化。 为了解决这些问题，我们建议采用**多模板融合**跟踪方案。 此外，提出了基于光流的补丁模板更新方案，以提高整体跟踪性能。*
+	- 文章很短，内容感觉不咋地
+	
+- **[]** Fully Convolutional Siamese Fusion Networks for Object Tracking
+	- ICIP 2018、CCF_C
+	- *我们采用卷积层的融合策略进行对象跟踪，以基于卷积神经网络实现良好的特征表示。 具体来说，我们基于归一化互相关（NCC）融合了VGGNet的三个卷积层。 首先，我们使用VGGNet的**三个卷积层作为融合**的基础，并基于卷积内核减小卷积层的大小。 然后，我们将卷积层的大小调整为与用于层融合的反卷积层的大小相同。 接下来，我们将基于NCC的三层融合在目标区域和搜索区域之间，并生成响应图。*
+	- 实验对比做的不咋地
+	
+- **[]** Flow Guided Siamese Network for Visual Tracking
+
+  - ICIP 2018、CCF_C
+  - *在本文中，我们尝试从两个方面解决这个问题。 首先，我们使用光流来利用帧间信息，当我们获得最后一帧的位置时，我们可以**通过计算光流并在其周围生成样本来预测当前帧的大概位置**。 其次，我们使用跟踪的补丁作为参考来更好地识别目标。 我们设计了一个暹罗网络，该网络以由示例和样本组成的图像对作为输入，还通过添加先验概率来修改目标函数。*
+
+- **[]** Visual Tracking Via Siamese Network With Global Similarity
+
+  - ICIP 2019、CCF_C
+  - *基于暹罗网络的跟踪器通过利用成对丢失或三重丢失来训练其网络，这很容易导致过度拟合。 另外，难以区分训练样本中的一些**硬样本**。 在本文中，我们提出了一种新颖的**全局相似度损失**来训练网络。 具体来说，我们利用两个高斯分布来模拟和优化训练集中正样本和负样本的分布，并对硬样本添加约束。*
+
+- **[]** Cross-Layer Convolutional Siamese Network for Visual Tracking
+
+  - ICONIP 2018、CCF_C
+  - *目前大多数基于暹罗网络的跟踪器并没有充分挖掘不同层次的语义特征。为此，我们提出了一种跨层卷积暹罗网络跟踪器（Siam-CC），试图从两个方面探索**不同层次的语义特征**。首先，我们结合浅层到深层的跨层卷积响应图来捕捉各种语义感知特征，同时强制Siam-CC只关注最感兴趣的位置，因为更多的语义信息能够减少背景的负面影响。其次，为了进一步提高对响应的识别能力，在传统的物流损失的基础上，增加了一个**自适应的对比损失**，在一定程度上有助于过滤掉一些噪声响应。*
+
+- **[]** Siamese Networks with Discriminant Correlation Filters and Channel Attention
+	
+	- CCF_D
+	
+- **[]** Region-based fully convolutional siamese networks for robust real-time visual tracking
+	
+	- CCF_D
+	
+- **[]** Siamese recurrent architecture for visual tracking
+	
+	- CCF_D
+	
+- **[]** Siamese Feature Pyramid Network for Visual Tracking
+	
+	- CCF_D
+	
+- **[]** Adaptive Hierarchical Siamese Network for Object Tracking
+	
+	- CCF_D
+	
+- **[]** DomainSiam: Domain-Aware Siamese Network for Visual Object Tracking
+	
+	- CCF_D
+	
+- **[]** Learning to Match Using Siamese Network for Object Tracking
+	
+	- CCF_D
+	
+- **[]** Dice Loss in Siamese Network for Visual Object Tracking
+	
+	- CCF_D
+	
+- **[]** Deep Siamese Networks toward Robust Visual Tracking
+	
+	- 综述，没下到
+- **[]** An In-Depth Analysis of Visual Tracking with Siamese Neural Networks
+	
+	- arxiv、
+	- *这项调查对九种流行追踪器的学习和推理能力进行了深入分析。 它既不是要研究整个文献，也不是为了审查提出用于视觉跟踪的各种神经网络。 相反，我们专注于暹罗神经网络，这是研究跟踪挑战性问题的有希望的起点。 这些网络有效地集成了特征学习和时间匹配功能，并且迄今已显示出最先进的性能。 特别强调了暹罗网络的分支机构，连接这些分支机构的层，培训的特定方面以及将这些网络嵌入到跟踪器中。 将现有论文的定量结果与以下结论进行了比较：现有评估方法显示出结果的可重复性和可比性问题。 本文提出了一种新颖的类似Lisp的形式主义，以更好地比较跟踪器。 假设跟踪器具有一定的功能设计和功能分解。 本文试图通过基于机器学习理论的问题表述以及将跟踪器解释为决策函数，为跟踪器设计奠定基础。 这项工作以有希望的研究结束，并提出了未来的工作建议。*
+	
+- **[]** Describe and Attend to Track: Learning Natural Language guided Structural Representation and Visual Attention for Object Tracking
+	
+	  - arxiv
+	- 引入NLP
+	
+	
+	
 
 # 11/28
 ## attention
